2014-01-18  Anders Carlsson  <andersca@apple.com>

        Remove ENABLE_THREADED_HTML_PARSER defines everywhere
        https://bugs.webkit.org/show_bug.cgi?id=127225

        Reviewed by Andreas Kling.

        This concludes the removal of over 8.8 million lines of threaded parser code.

        * Source/autotools/SetupWebKitFeatures.m4:
        * Source/cmake/WebKitFeatures.cmake:
        * Source/cmakeconfig.h.cmake:

2014-01-18  Lauro Neto  <lauro.neto@openbossa.org>

        Remove Nix files from WebCore
        https://bugs.webkit.org/show_bug.cgi?id=127176

        Reviewed by Anders Carlsson.

        * Source/cmake/OptionsNix.cmake: Removed.

2014-01-18  Zan Dobersek  <zdobersek@igalia.com>

        [GTK] Bump the minimum required Clang version to 3.3
        https://bugs.webkit.org/show_bug.cgi?id=127178

        Reviewed by Martin Robinson.

        * Source/autotools/CheckSystemAndBasicDependencies.m4: Require Clang 3.3 or later when using the Clang compiler to
        build the GTK port. Building with Clang 3.2 doesn't work anymore and there's no point in fixing that, as we should
        support the latest two versions of Clang (3.3 and 3.4), just like we do with GCC (4.7 and 4.8).

2014-01-14  Dan Bernstein  <mitz@apple.com>

        Only use color in make output when it’s going to a terminal.

        Reviewed by Mark Rowe.

        * Makefile.shared:

2014-01-13  Martin Robinson  <mrobinson@igalia.com>

        [CMake] Mark all dependency include paths and libraries as advanced variables
        https://bugs.webkit.org/show_bug.cgi?id=126504

        Reviewed by Daniel Bates.

        * Source/cmake/FindATK.cmake: Mark result variable as advanced.
        * Source/cmake/FindCairo.cmake: Ditto.
        * Source/cmake/FindEGL.cmake: Ditto.
        * Source/cmake/FindEnchant.cmake: Ditto.
        * Source/cmake/FindGLIB.cmake: Ditto.
        * Source/cmake/FindGStreamer.cmake: Ditto.
        * Source/cmake/FindHarfBuzz.cmake: Ditto.