@@ -1,8 +1,5 @@
-# Nix doesn't use cmakeconfig.h
-if (NOT PORT STREQUAL "Nix")
-    add_definitions(-DBUILDING_WITH_CMAKE=1)
-    add_definitions(-DHAVE_CONFIG_H=1)
-endif ()
+add_definitions(-DBUILDING_WITH_CMAKE=1)
+add_definitions(-DHAVE_CONFIG_H=1)
 
 if (WTF_OS_UNIX)
     add_definitions(-DXP_UNIX)
