@@ -1,3 +1,12 @@
+2014-01-20  Ryuan Choi  <ryuan.choi@samsung.com>
+
+        [CMAKE] Remove Nix from CMake scripts
+        https://bugs.webkit.org/show_bug.cgi?id=127264
+
+        Reviewed by Anders Carlsson.
+
+        * CMakeLists.txt: Removed.
+
 2014-01-16  Benjamin Poulain  <bpoulain@apple.com>
 
         Remove Nix from Source/Platform
